--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="js/script.js"></script>
+  <script src="js/script.js" defer></script>
   <title>Rock Paper Scissors</title>
 </head>
 <body>
-  
+  <button class="btn">Rock</button>
+  <button class="btn">Paper</button>
+  <button class="btn">Scissors</button>
+  <div class="results">
+  </div>
 </body>
 </html>
